# LintScout

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  file with secret.txt  test-file.ts  todo.txt
.github/workflows/: ci.yml  pages.yml  release.yml
src/: cli.rs  config.rs  error.rs  finding.rs  lib.rs  main.rs  registry.rs  rule.rs  scanner.rs  scout.rs  stats.rs
src/builtin/: bandit.rs  biome.rs  clang_tidy.rs  clippy.rs  cppcheck.rs  detekt.rs  eslint.rs  flake8.rs  golangci.rs  gosec.rs  hadolint.rs  java.rs  jshint.rs  ktlint.rs  mod.rs  mypy.rs  oxlint.rs  phpstan.rs  prettier.rs  pylint.rs  pyright.rs  rubocop.rs  ruff.rs  shellcheck.rs  staticcheck.rs  stylelint.rs  swiftlint.rs  typescript.rs
src/matching/: fileExtension.rs  language.rs  mod.rs  scout.rs
src/output/: count.rs  json.rs  mod.rs  sarif.rs  text.rs
src/scanner/: finding.rs  mod.rs  scanner.rs  stats.rs
src/scouts/nodejs/: eslint.rs  mod.rs  typescript.rs
tests/: cli_tests.rs
tests/fixtures/: Dockerfile  lintscout.yml  sample_cpp.cpp  sample_css.css  sample_go.go  sample_java.java  sample_js.js  sample_kt.kt  sample_php.php  sample_py.py  sample_rb.rb  sample_rs.rs  sample_sh.sh  sample_ts.ts
website/: index.html  style.css
