[package]
name = "lintscout"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
description = "Detect linter ignore directives in source code"
authors = ["Elad Ben Shmuel"]
license = "MIT"
repository = "https://github.com/ArieLeo/LintScout"
keywords = ["lint", "linter", "code-quality", "ci", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lintscout"
path = "src/main.rs"

[lib]
name = "lintscout"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
